--- a/templates/cart.html
+++ b/templates/cart.html
@@ -5,7 +5,7 @@
 
     <table class="table table-striped">
         <thead>
-        <tr>
+       <!--  <tr>
             <th>Melon Name</th>
             <th>Quantity</th>
             <th>Price</th>
@@ -36,11 +36,11 @@
             <td>2</td>
             <td>$3.00</td>
             <td>$6.00</td>
-        </tr>
+        </tr> -->
         </tbody>
     </table>
 
-    <h3>Total: $27.00</h3>
+    <!-- <h3>Total: $27.00</h3> -->
 
     <a href="/checkout" class="btn btn-large btn-primary">Check Out</a>
 
