--- a/templates/cart.html
+++ b/templates/cart.html
@@ -5,7 +5,8 @@
 
     <table class="table table-striped">
         <thead>
-       <!--  <tr>
+
+       <!-- <tr>
             <th>Melon Name</th>
             <th>Quantity</th>
             <th>Price</th>
@@ -37,6 +38,12 @@
             <td>$3.00</td>
             <td>$6.00</td>
         </tr> -->
+        <body>        
+        <ul>
+        {% for melon_id,qty in session['cart'].items() %}
+           <li>{{ melon }} </li> 
+        {% endfor %}
+        </ul>
         </tbody>
     </table>
 
